て　ごぼう講

--- a/page_te.html
+++ b/page_te.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/te.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -59,9 +64,60 @@
 
      <hr>
 
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+       <p>茶碗いっぱいのご飯とごぼうを食べる伝統行事</p>
+     </div>
+     <div class="shasin">
+      <img src="pageimages/ごぼう講.png">
+     </div>
+
+    <div class="page-setumei">
+    <p>惣田正月十七日講(そうでんしょうがつじゅうしちにちこう)またの名を「ごぼう講」！<br>
+      越前市国中町で江戸時代から続く行事で、変わった様子から奇祭といわれています。<br>
+      <br>
+      ▼ごぼう講の様子
+    </p>
+    </div>
+
      <iframe width="560" height="315" src="https://www.youtube.com/embed/j6GxErlin9k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+
+     <div class="balloon2-right">
+      <p>ごぼう講の歴史は？</p>
     </div>
+    <div class="hitokoto">
+      <p>いろんな説があるが、歴史は300年！</p>
+    </div>
+   <div class="page-setumei">
+   <p>
+     毎年旧暦の正月17日(2月17日)に神事を行い、山盛りのごぼう料理を食べて直会(なおらい)という神事の後の会食をする行事が300年余りの間続けられてきました。<br>
+     町内にある国中神社の隠し田の米をお殿様に内緒で食べたことが始まりという説もありますが、信仰や頼母子講(たのもしこう)という、年貢を納められない人を神社の蓄えで助け、村からの流出を防いで結束を固めることが目的だったと考えられています。
+   </p>
+   </div>
+
+
+
+
+    </div>
+
+    
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>ごぼう講は、越前かるたを作り始めてはじめて知った文化の一つです。実際に見たことはないのですが、写真を見てあまりの量に仰天しました！どんな味がするのでしょうか、いつか食べてみたいなと思います。(さすがにこの量は食べきれないかな…)</p>
+     </div>
+    </div>
+    </div>
+  </div>
+  <!--吹き出し終わり-->
 
     <hr>
 
