--- a/page_te.html
+++ b/page_te.html
@@ -98,7 +98,19 @@
    </p>
    </div>
 
-
+   <div class="balloon2-right">
+    <p>どのくらい多いの？</p>
+  </div>
+  <div class="hitokoto">
+    <p>お米は5合、ごぼうは20本分⁉</p>
+  </div>
+ <div class="page-setumei">
+ <p>
+  ご飯は「物相飯（もっそうめし）」といい、茶碗に5合分ものご飯を高さ約15cmに積み上げたもの。重さはなんと推定1750グラム！<br>
+  一方、皿からあふれるほど山盛りにされた味噌和えのごぼうは、ごぼうを切らずにたたいて割いたもので、本数的には約20本使用しているのだとか！<br>
+  その他、二つ割りのたくあん2本、丸揚げにしたごぼう2本と焼き豆腐1丁。これが一人分なんだそうです。多い！
+ </p>
+ </div>
 
 
     </div>
