--- a/page_ku.html
+++ b/page_ku.html
@@ -7,10 +7,16 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ku.css">
 </head>
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +63,54 @@
        <h2>く　：　蔵の辻に集まれ！　食べて遊んで　結の祭り</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>江戸の商人の名残。蔵に囲まれた新名所</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/蔵の辻.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>お総社のななめ向かいにある白壁の蔵のおしゃれな一角、通称「蔵の辻」</p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>なんのための場所？</p>
+     </div>
+     <div class="hitokoto">
+       <p>昔は商人たちの蔵、今は街づくりの場</p>
+     </div>
+     <div class="page-setumei">
+      <p>この地区では江戸時代以降、関西から北陸方面への物資の中継基地として栄えており、それぞれ商人たちの蔵が並んでいました。
+       <br>
+       もともとそれを取り壊して大型商業施設を建てる予定だったのが、近くに住む人たちのはたらきかけによって蔵を残して活用しようという方向になりました。
+       <br>
+       何度も話し合い、協定を結び、蔵を直したり街並みを整えて今の蔵の辻ができたのです！
+      </p>
+     </div>
+
+
     </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>白壁と黒い瓦と緑の木々たち。色の調和がおしゃれでお気に入りのスポットの一つです！たまにバザーなどが行われているので、ふらっと立ち寄っても面白い場所だと思います。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
