--- a/page_se.html
+++ b/page_se.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/se.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,120 @@
        <h2>せ　：　清流五つの　柳の滝　つばめ返しを　あみ出した</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>大小様々な形の５つの滝</p>
+     </div>
+     <div class="page-setumei">
+      <p>今立の東の方、権現山(ごんげんやま)の真ん中あたりにある柳の滝は、大小5つの滝で成り立っています。30メートルの高さから流れ落ちる布滝や、巨岩が2メートル余りもえぐられているお釜滝をはじめ、不動滝、窓滝、夫婦滝とバラエティ豊かな滝の景観が楽しめます。<br><br>
+        ▼柳の滝のコースマップ
+      </p>
+     </div>
+     <div class="shasin">
+      <img src="pageimages/柳の滝マップ.png">
     </div>
+
+     <div class="balloon2-right">
+       <p>伝説がある？</p>
+     </div>
+     <div class="hitokoto">
+       <p>佐々木小次郎がツバメ返しをあみ出した場所⁉</p>
+     </div>
+     <div class="page-setumei">
+      <p>伝説によると、剣豪(けんごう)佐々木小次郎がこの滝で「ツバメ返し」の秘剣をあみ出したといわれています。
+      <br>
+      いつまでたっても師匠に勝つことができなかった小次郎は、「飛んでいるツバメを斬ることができれば師匠に勝てるのではないか？」と考え、それから毎日滝に出かけてはツバメに挑み続けたそうです。
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>滝紹介！</p>
+     </div>
+     <div class="hitokoto">
+      <p>どれも個性的で迫力のある滝！</p>
+    </div>
+
+    <div class="page-setumei">
+      <p>★お釜滝<br>
+        高さ11メートルの滝で、落下する水の勢いが巨大な石をえぐって、深さ約２メートルの滝つぼを作り、その形が釜底を連想させることからお釜滝と呼ばれます。かるたに描いてあるのはこの滝です！
+      </p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/お釜滝.jpg">
+    </div>
+
+    <br>
+    <br>
+
+
+    <div class="page-setumei">
+      <p>★布滝<br>
+        柳の滝でその規模が最も大きく、白い布をたらしたような美しい滝。大岩をすべるように流れ、高さは36メートルもあります！
+      </p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/布滝.png">
+    </div>
+
+    <br>
+    <br>
+
+    <div class="page-setumei">
+      <p>★夫婦滝<br>
+        大きくえぐられた岩の上から2すじの水が流れ落ちることから夫婦滝と名付けられました。
+      </p>
+    </div>
+     <div class="shasin">
+        <img src="pageimages/夫婦滝.png">
+     </div>
+
+     <br>
+    <br>
+
+     <div class="page-setumei">
+      <p>★窓滝<br>
+        2つの峰(みね)に挟まれて一か所窓を切ったように開けたところから落下するので、窓滝と名付けられた。高さ41メートルの段状の滝です。
+      </p>
+    </div>
+      <div class="shasin">
+        <img src="pageimages/窓滝.png">
+      </div>
+
+      <br>
+    <br>
+
+      <div class="page-setumei">
+        <p>★不動滝<br>
+          滝の横に不動明王(ふどうみょうおう)が祀(まつ)られているところから不動滝と名付けられました。コースでは最初に見える滝です。
+        </p>
+      </div>
+     <div class="shasin">
+        <img src="pageimages/不動滝.png">
+      </div>
+    
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>かるたの絵を描くのに一番苦労した札です(水っぽさがでなくて泣)。最初は布滝を描いていたのですが、滝の感じが伝わりづらいかなと思い、お釜滝にしました。横に立っているのは佐々木小次郎のイメージです。 </p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
