--- a/page_u.html
+++ b/page_u.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/u.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,95 @@
        <h2>う　：　打刃物　磨き抜かれた　伝統と技</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>独特の技法が光る越前代表の伝統工芸品</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/打刃物.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>越前市で作られている金工品(包丁や鎌など)のことをいいます。
+       <br>
+       薄くて軽い刃が特徴で、昔ながらの手仕上げにこだわる匠の技によるものです。
+       <br>
+       昭和54年に刃物としては初の伝統工芸品の指定を受けました。（全体では105番目）
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>歴史は？</p>
     </div>
+    <div class="hitokoto">
+     <p>700年の伝統の技</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>1337年(南北朝時代)京都の刀匠(とうしょう)・千代鶴国安が、刀剣制作に適した地を求め府中(今の越前市)を訪れた時に、近くに住む農民のために鎌を作ったことから始まったといわれています。
+      <br>
+      江戸時代には福井藩の保護を受け、鍛冶株仲間が結成されたり、越前の鎌を愛用していた漆かき職人が漆を求めて全国を回っている時に、打刃物を売りまわって注文を持ち帰ったことから、全国で使われるようになりました。
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>もっとよく知るには？</p>
+    </div>
+    <div class="hitokoto">
+     <p>タケフナイフビレッジ</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/タケフナイフビレッジ.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      <br>
+      1993年に建てられたタケフナイフビレッジ協同組合の拠点、共同工房、直売所です。 <br>
+      工場見学や研ぎ・修理のほか、体験教室も行っています。 <br>
+      2020年8月には新工房が完成し、見学工房や売店があります。
+      <br>
+      <br>
+      住所　　▶　越前市余川町22-91<br>
+       営業時間▶　9：00～17：00<br>
+       定休日　▶　年中無休(年末年始を除く)<br>
+       電話　　▶　0778-27-7120
+     </p>
+    </div>
+
+    <div class="official-site">
+      <a href="https://www.takefu-knifevillage.jp/" class="btn btn--red btn--radius btn--cubic">タケフナイフビレッジ　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>越前市の伝統工芸品といったら越前打ち刃物。タケフナイフビレッジにはサークルの一環でお邪魔したことがあります。包丁だけではなく、簡単なキーホルダーなども作れるので、気軽に足を運んでみて下さい！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6464.822891292748!2d136.23369380236431!3d35.88793749476298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a960d5ccaad3%3A0xb0e54cd451122199!2z44K_44Kx44OV44OK44Kk44OV44OT44Os44OD44K4!5e0!3m2!1sja!2sjp!4v1603638672259!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+    </div>
+
 
     <hr>
 
