お　コウノトリ

--- a/page_o.html
+++ b/page_o.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/o.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,99 @@
        <h2>お　：　大きくなぁれ　武生の大鳥　コウノトリ</h2>
      </div>
 
+     
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前市の市鳥</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/コウノトリ.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>越前市の市鳥に指定されているコウノトリ。
+       <br>
+       国の特別天然記念物にも指定されており、越前市では主に白山地区で取り組みが行われています。
+       <br>
+       昭和54年に刃物としては初の伝統工芸品の指定を受けました。（全体では105番目）
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>特徴は？</p>
     </div>
+    <div class="hitokoto">
+     <p>コウノトリのおしゃべりは鳴き声ではない⁉</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>★コウノトリの見た目 <br>
+      くちばしが太めで長く黒色です。羽の色は白色ですが、先の方が黒くなっています。目の周りが赤くふち取られています。
+      <br>
+      <br>
+      ★コウノトリの食べ物 <br>
+      食べ物は魚やカエル、ザリガニなどの他ネズミなどを食べます。白山地区では田んぼに住むフナやドジョウ、カエル、ヘビ、バッタを食べています。
+      <br> 
+      <br>
+      ★コウノトリのおしゃべり <br>
+      鳴き声を出さずにくちばしをたたき合わせて、カタカタと音を出しておたがいおしゃべりしています。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>歴史は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前市とコウノトリの歴史は60年以上</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>越前市は日本の野生のコウノトリの最後の生息地(兵庫県豊岡市、福井県小浜市・越前市)の一つであり、昭和30年代には1つのつがい(オスとメスのペア)が約9年間巣を作り続けていました。
+      <br>
+      <br>
+      その後、武生にコウノトリはいなくなってしましましたが、昭和45年には、くちばしの折れたコウノトリ(コウちゃん)が飛来し、地域の人達による保護活動が絵本や紙芝居になり、それが現在でも全国各地で語りつがれるようになりました。
+      <br> 
+      <br>
+      平成22年4月には、40年ぶりにコウノトリ2羽が飛来し、そのうち1羽は長く滞在したことから、市はそのコウノトリを「えっちゃん」と名づけ、なんと特別住民票まで発行しました！
+     </p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/えっちゃん.jpg">
+    </div>
+
+    <br>
+
+    <div class="official-site">
+      <a href="http://www.city.echizen.lg.jp/office/060/020/kounotoritoechizensi.html" class="btn btn--red btn--radius btn--cubic">コウノトリ年表はこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    <div class="official-site">
+      <a href="http://www.city.echizen.lg.jp/office/060/020/satochisatoyama/nmausatodukuri.html" class="btn btn--red btn--radius btn--cubic">コウノトリ新着情報はこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>「コウノトリが赤ちゃんを運んでくる」なんて昔から言われてますよね。コウノトリ自体はかなり前に実際に見たことがありますが、近くで見ると大きくて迫力があったことを覚えています。コウノトリに関してニュースでやっていると、つい見てしまうのは越前市民あるあるでしょうか？</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
