--- a/page_ke.html
+++ b/page_ke.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ke.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -58,7 +63,95 @@
        </h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>日野山の景色を楽しむ大正の邸宅</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/愛山荘.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        とても大きな数寄屋風書院(すきやふうしょいん)という、茶室を取り入れたお家。「数寄」とは和歌や茶の湯、生け花など、日本に昔から伝わる繊細(せんさい)な和の心を生活の中に取り入れた生きざまのことです。<br>
+        当時の和風建築としての技術の粋(いき)をあつめたところで、春夏秋冬どの季節でも趣(おもむき)のある景色をたのしめるお庭です。越前富士と呼ばれる日野山をはじめとする奥深い越前子の大自然を感じることができ、それらが見事に調和した別荘建築です。
+        
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>何を見ることができるの？</p>
     </div>
+    <div class="hitokoto">
+     <p>四季の緑や花が楽しめる！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/愛山荘内.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      愛山荘では四季折々の緑や花で季節を感じとることができます。<br><br>
+      早春…梅<br>
+      春…きゃらぼく、桜、ツツジ、ドーダンツツジ<br>
+      梅雨…アジサイ<br>
+      夏…やまぼうし、さるすべり<br>
+      秋…紅葉、きんもくせい<br>
+      冬…さざんか、椿　　枝にふりつもる雪もきれいです。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-23-5011</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　　▶　越前市若竹町6-27 <br>
+      営業時間▶　10：00～16：00(最終入館15：00)<br>
+      閉館日　▶　火曜、水曜、第2・第4金曜日<br>
+      電話　　▶　0778-23-5011<br>
+      <br>
+      入館料<br>
+      ■大人入館料(飲み物、ケーキ付き)　1,100円<br>
+      ■中学生以下入館料(飲み物、ケーキ付き)　600円<br>
+      ■大人入館料(飲み物、ケーキ、おそば付き)　1,600円<br>
+      ■中学生以下入館料(飲み物、ケーキ、おそば付き)　1,100円<br>
+      ■愛山荘パンフレット１冊　300円
+      <br>
+      <br>
+      ※新型コロナウイルスの影響で入館を見合わせている場合がございます。
+     </p>
+    </div>
+    <div class="official-site">
+      <a href="http://aizanso.com/" class="btn btn--red btn--radius btn--cubic">愛山荘　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>こちらは越前かるたを作り始めて初めて知った場所の一つです。コロナの影響で中には入れませんでしたが、写真を見るだけでとっても趣のある場所だということが伝わってきます。いつか訪れてみたいです！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
     <div class="access">
       <h1>アクセス</h1>
