--- a/page_ni.html
+++ b/page_ni.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前瓦</title>
+  <title>越前かるた-越前瓦</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ni.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,66 @@
        <h2>に　：　似合う瓦は越前瓦　和風洋風どちらでも</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>丈夫で長持ちする越前産の粘土瓦</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/越前瓦.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        寒い場所に強くて丈夫(じょうぶ)な瓦として知られる「越前瓦」。雪が多い北陸地方でも安心な屋根素材として人気があります。<br>
+        神山地区に多く工場が立ち並び、福井県の地域ブランドにも認定されています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>特徴は？</p>
     </div>
+    <div class="hitokoto">
+     <p>凍らない、割れない、あきない！</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      ★特徴１　どんな寒い土地でも凍らない<br>
+      1200℃前後の高温での還元焼成(かんげんしょうせい・酸素が足りない状態で焼く焼き方)で、吸水率が低く、耐寒性の瓦として寒い土地・雪の降る土地にピッタリの瓦です。<br><br>
+      ★特徴２　割れにくく長持ち<br>
+      高温での還元焼成により、焼き締まり、硬く、滑りにくい、除雪器具などによる衝撃(しょうげき)に強い瓦です。<br><br>
+      ★特徴３　あきのこない優雅な銀鼠(ぎんねず)色<br>
+      鉄結晶の落着いた色調を活かしているので、和風の家はもちろん、洋風の家にも美しく調和します。
+     </p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/越前瓦いろいろ.png">
+    </div>
+
+
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>実家の瓦も越前瓦です。最近は洋風の家でも瓦を使用しているところもあって、見かけるたびに「おしゃれだなぁ」って感じています。打刃物や和紙と比べると幾分かマイナーなイメージがあるので、もっと広まってほしいと思っています！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
