は　バラ大杉

--- a/page_ha.html
+++ b/page_ha.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>バラ大杉</title>
+  <title>越前かるた-バラ大杉</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ha.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,9 +62,82 @@
        <h2>は　：　白山神社の　枝がバラバラ　バラ大杉</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>樹齢500年。武生市で一番の大杉</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/バラ大杉正面.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        越前市で一番大きな杉といわれる白山神社のバラ大杉。樹齢(じゅれい・木の年齢のこと)は推定500年で、県に天然記念物として指定されています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>なぜ「バラ」大杉？</p>
+    </div>
+    <div class="hitokoto">
+     <p>枝の先がバラバラに見えるから！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/バラ大杉下.png">
     </div>
 
-  </div><div class="access">
+    <div class="page-setumei">
+     <p>
+     枝が分かれる角度が大きく、パッと見たときに枝の先がばらばらに見えるのでバラ大杉といいます。(花のバラは関係ない！)<br>
+      根本は太くなるものの、枝が細く垂れるため、雪国向けの種類だそうです。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どのくらい大きいの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>高さは32ｍ！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/バラ大杉.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      バラ大杉の高さは32ｍ。マンションだとだいたい10階建てと同じ高さです！<br>
+      一番大きなものの前には看板が立っていますが、神社には10本の個体があり、どれもサイズは大きなものです。
+     </p>
+    </div>
+
+    </div>
+
+  
+
+  <!--吹き出しはじまり-->
+  <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>近くで見ると枝の先がほぼ真上にあって、大きさを感じることができました。枝に注目すると、どの枝がどこから生えているのかわからなくなって不思議な感じがしました！雨が降っているときは地面がぬかるんで滑りやすくなっているので気を付けて下さいね。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
+  <div class="access">
     <h1>アクセス</h1>
 
     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23713.02374953875!2d136.25054260940965!3d35.88810509753079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x947157339daf6f76!2z55m95bGx56We56S-!5e0!3m2!1sja!2sjp!4v1599640284133!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
