ひ　味真野桜

--- a/page_hi.html
+++ b/page_hi.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>味真野小学校の桜</title>
+  <title>越前かるた-味真野小学校の桜</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/hi.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,94 @@
        <h2>ひ　：　広い校庭に咲き誇る　大きな味真野　一本桜</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>味真野小学校の校庭の真ん中に咲く大きな桜の木</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/味真野の桜.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        味真野小学校の校庭の真ん中にある一本桜。<br>
+        1978年、越前市の天然記念物に指定されており、推定樹齢140歳を超える大木だそうです。<br>
+        県内外から観光客が訪れる桜の名所です。
+      </p>
+     </div>
+
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/8pJ-ypV394Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+     <div class="balloon2-right">
+      <p>どのくらい大きいの？</p>
     </div>
+    <div class="hitokoto">
+     <p>高さは14メートル</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+       桜の高さは約14メートルで、根の周りは4メートル20センチです。
+       <br>
+       桜の種類はエドヒガンです。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>どうして校庭の真ん中に？</p>
+    </div>
+    <div class="hitokoto">
+     <p>校庭を広くしたから！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      最初は校舎の横に植えられましたが、1978年、旧校舎を取り壊して新校舎を建てるときに校庭を広くしたため、桜が校舎の真ん中にきました。<br>その時に、「桜を移動させてはどうか」という声もありましたが、当時の校長先生が、そのままの位置で残すことを決めました。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+       <p>見ごろはいつ？</p>
+     </div>
+     <div class="hitokoto">
+      <p>4月いっぱい</p>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        桜の見ごろは4月上旬～4月下旬。<br>昼でももちろん楽しめますが、夜にはライトアップがされて夜桜を楽しむことができます。
+      </p>
+     </div>
+
+     <div class="shasin">
+      <img src="pageimages/夜桜.jpg">
+    </div>
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>校庭の真ん中に桜があるなんてびっくりですが、絵本のようで素敵ですよね！普段の学校生活が気になります…。小さい頃はよく遊びに行って桜の木の下で写真を撮りました！見学は自由ですが小学校の敷地内なので学校の迷惑にならないように気を付けて下さいね。 </p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
 
   </div><div class="access">
     <h1>アクセス</h1>
