ま　越前箪笥

--- a/page_ma.html
+++ b/page_ma.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前箪笥</title>
+  <title>越前かるた-越前箪笥</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ma.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,106 @@
        <h2>ま　：　魔よけの猪の目　越前箪笥</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>魔よけの「猪の目」が特徴な伝統工芸品のタンス</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/越前箪笥.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        越前市や鯖江市で作られる、材木を鉄製金具や漆塗りで装飾しているタンスです。<br>
+        2013年には越前打刃物、越前和紙に続いて3品目となる伝統的工芸品に指定されました。
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>どんなタンス？</p>
+     </div>
+     <div class="hitokoto">
+      <p>使いこむほど味わい深い風合いと重厚感</p>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        越前指物(さしもの)という、板と板や棒などを、釘を使わずに指し合わせる技法を使った製品です。<br>
+        耐久性に優(すぐ)れ、硬くて木目が美しいケヤキと、湿気を通さず割れや狂いが少ないために高級タンスの材料として重宝(ちょうほう)されてきたキリを主に使っています。<br>
+        使いこむほど味わい深い風合いと重厚感があります。からくりがあるタンスもあるそうですよ！
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>猪の目(いのめ)とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>魔よけの役目をしているハート型の金具</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/猪の目.png">
+    </div>
+    <div class="shasin">
+      <img src="pageimages/越前箪笥金具.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       猪の目とは名前のとおり猪(イノシシ)の目のこと。<br>
+       タンスの角につけられる金具で、魔よけの意味がこめられています。越前箪笥の特徴です。<br><br>
+       他にもフチのもくもくと雲のようになっている部分を「雲」といい、いいことがある前兆の雲を表しています。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>越前箪笥の町がある？</p>
+    </div>
+    <div class="hitokoto">
+     <p>タンス町通り</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/タンス町通り.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       国道365線沿いの中村病院から西へ向かう、約200メートルの道を「タンス町通り」といいます。<br>
+       江戸時代後期から木工技術を持つ職人が多く住み、町は嫁入り道具を求める人でにぎわいました。
+       <br>
+       今は和洋家具の製造販売業者や建具商が10数軒集まっています。<br>
+     </p>
+    </div>
+
+
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>重厚感のあるタンスはかっこいいですよね。嫁入り道具だったこともありますが、金具がハート型や雲型でかわいらしい様子から、女性に人気だったことも納得です。私も1つ欲しくなってきました～</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+   <div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1569.9481315902112!2d136.16352870596054!3d35.900411921433744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ac4888ca6e2f%3A0xf68b5ca59a5e2e6c!2z56aP5LqV55yM6LaK5YmN5biCIOOCv-ODs-OCueeUuumAmuOCig!5e0!3m2!1sja!2sjp!4v1603896128256!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
 
     <hr>
 
