--- a/page_ro.html
+++ b/page_ro.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>御清水不動尊の水</title>
+  <title>越前かるた-御清水不動尊の水</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ro.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,117 @@
        <h2>ろ　：　路地の　おいしい　お清水不動尊の水</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>地元民に愛される路地裏(ろじうら)の清水</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/御清水不動尊の水.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>御清水不動尊は「おしょうずふどうそん」と読みます！
+       <br>
+       武生駅から徒歩で行けるほど近く、街中の路地にあります。
+       <br>
+       不動明王の横に清水があふれており、地元住民には「おしょうずさん」と呼ばれて親しまれています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>どんなお水？</p>
     </div>
+    <div class="hitokoto">
+     <p>「ふくいのおいしい水」に認定！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/御清水.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>写真のように、龍の口からお水が出ているように見えますね！
+      <br>
+      もともとは湧き水だったのを、今は地下水をくみ上げています。平成18年にはふくいのおいしい水に認定されました。
+      <br>
+      味はクセのないまろやかな味です。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>ふくいのおいしい水？</p>
+    </div>
+    <div class="hitokoto">
+     <p>地域の魅力(みりょく)として認められたお水！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/御清水看板.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>福井県では、<br>
+       ①地域の貴重な宝である湧水等の保全活動の推進<br>
+       ②質のよい水によって引き立つ県の魅力の発信<br>
+       を目的として、基準を満たした県内の湧水などを「ふくいのおいしい水」として認定しています。<br><br><br>
+       
+      ★越前市の「ふくいのおいしい水」
+      <br><br>
+      石神の湧水(ゆうすい)：越前市大虫町<br>
+      瓜割(うりわり)清水：越前市赤谷町<br>
+      御清水不動尊の水：越前市吾妻町<br>
+      解雷ヶ(けらが)清水：越前市千合谷町<br>
+      治左川(じさがわ)井戸：越前市上真柄町<br>
+      段田(だんた)清水：越前市米口町<br>
+      榎(よのき)清水：越前市横住<br>
+
+      <br>
+      
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>お水は持って帰れる？</p>
+    </div>
+    <div class="hitokoto">
+     <p>持って帰れます！</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>1日に多くの人がくみに来ています。
+      <br>
+      誰でも持って帰ることができるので、水筒(すいとう)やペットボトルを持っていくといいかもしれませんね。
+      <br><br>
+      ただし混み合ってきたときは1回2リットル×3本まで！ゆずりあってくむようにしてください。<br>
+      また行くときは細い道を通り、駐車場がないので注意してくださいね。
+     </p>
+    </div>
+
+
+
+    </div>
+
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>こぢんまりとしていて隠れスポットといった雰囲気(ふんいき)です。壁には御清水不動尊に関する記事や、お不動さんの呪文が書かれた紙が貼ってあります。向かいには「御清水庵」という、ここのお水を使ったおそば屋さんがあるのでぜひ一緒に行ってみてくださいね。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
