--- a/page_tu.html
+++ b/page_tu.html
@@ -127,7 +127,7 @@
      </div>
 
      <div class="omise">
-       <img src="pageimages/" alt=""/>
+       <img src="pageimages/越前屋.jpg" alt=""/>
        <img src="pageimages/越前屋そば.jpg" alt=""/>
      </div>
 
