--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ auto: true,
         <div class="event">
          <h3>でっかいかるたで大合戦！！</h3>
          <p>仁愛大学吉村ゼミの3年生7名は、越前かるたを“でっかく”して野外で取り合う「でっかいかるたで大合戦！！」というかるた大会を企画し、2019年10月22日、武生中央公園で開催しました！
-         <div class="linkcolor"><p><a href="https://mt77j.github.io/karuta/index.html">▶大会のホームページはこちら</a></p></div>
+         <div class="linkcolor"><p><a href="https://mt77j.github.io/karuta/index.html">◆大会のホームページはこちら</a></p></div>
 
          <p>ルール
            <br>
@@ -188,7 +188,7 @@ auto: true,
 
          <img src="images/報告会.jpg" art="">
 
-         <div class="linkcolor"><p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">▶COGでっかいかるたの資料はこちら</a></p></div>
+         <div class="linkcolor"><p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">◆COGでっかいかるたの資料はこちら</a></p></div>
         </div>
       </div>
 
@@ -203,7 +203,7 @@ auto: true,
        <p>所属：仁愛大学 コミュニケーション学科 吉村ゼミ<br>
        出身：福井県越前市<br>
        吉村ゼミにてデザイン・企画の経験を積み、現在は卒業制作として越前かるたのプロジェクトを進めている。</p>
-       <p>▶メッセージ◀<br>
+       <p>■メッセージ■<br>
       『でっかいかるたで大合戦！！』のイベントから始まったこのプロジェクトは、地域貢献活動支援補助金など、市役所の方々のご協力もあって完成品の制作まで進めることができました。<br>
       生まれも育ちも越前市である私は、かるた王国と言われる越前市でかるたを通して越前市の魅力を伝えたいと考え、カラフルながらも趣のある色を札1枚1枚に与えて遊んで楽しい見て楽しいかるたになるようにデザインしました。制作にあたって、実際にその場所に行って取材することもあり、私自身魅力を再発見することができたと思います。<br>
       かるたで遊んでみて、気になった札があれば裏面のQRコードを読み取り、たくさんの魅力に触れていただけると嬉しいです。
