--- a/page_wa.html
+++ b/page_wa.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前市の市章</title>
+  <title>越前かるた-越前市の市章</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/wa.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,60 @@
        <h2>わ　：　我らのふるさと越前市　市章はEの形だよ</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>Eをモチーフにした越前市のシンボル</p>
+     </div>
+     <div class="sisyo">
+       <img src="pageimages/市章.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>平成17年10月1日制定された、酒井一さんによるデザイン。
+        <br>
+        越前(Echizen)の頭文字「E」をモチーフにしています。
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>どんな意味があるの？</p>
     </div>
+    <div class="hitokoto">
+     <p>越前市の将来像を表している</p>
+    </div>
+   
+    <div class="page-setumei">
+     <p>太く流れるようなラインは、かつて越前市の国府が置かれて以来、積み重ねられてきた歴史、伝統、文化そして豊かな自然を、また、越前市の将来像である「交流拠点都市」「生活快適都市」「伝統文化都市」を表現しています。
+       <br><br>
+       上の緑のラインは、環境と共生した「生活快適都市」のイメージ「自然」を表現<br>
+       中のオレンジのラインは、豊かな心、郷土の心を育む「伝統文化都市」のイメージ「温かさ」を表現<br>
+       下の青いラインは、自立と活気ある「交流拠点都市」のイメージ「発展性」を表現
+
+       
+     </p>
+    </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>越前市のマークですが、「E」がモチーフになっているとは初めて知りました！いわれてみればEの形に見えるかも…。絵札にするときは周りに何か付け足そうかとも考えたのですが、シンプルにすることで逆に目立ったので結果オーライかなと思っています。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
     <hr>
 
