--- a/page_wa.html
+++ b/page_wa.html
@@ -90,9 +90,9 @@
     <div class="page-setumei">
      <p>太く流れるようなラインは、かつて越前市の国府が置かれて以来、積み重ねられてきた歴史、伝統、文化そして豊かな自然を、また、越前市の将来像である「交流拠点都市」「生活快適都市」「伝統文化都市」を表現しています。
        <br><br>
-       上の緑のラインは、環境と共生した「生活快適都市」のイメージ「自然」を表現<br>
-       中のオレンジのラインは、豊かな心、郷土の心を育む「伝統文化都市」のイメージ「温かさ」を表現<br>
-       下の青いラインは、自立と活気ある「交流拠点都市」のイメージ「発展性」を表現
+       ・上の緑のラインは、環境と共生した「生活快適都市」のイメージ「自然」を表現<br><br>
+       ・中のオレンジのラインは、豊かな心、郷土の心を育む「伝統文化都市」のイメージ「温かさ」を表現<br><br>
+       ・下の青いラインは、自立と活気ある「交流拠点都市」のイメージ「発展性」を表現
 
        
      </p>
