--- a/page_ra.html
+++ b/page_ra.html
@@ -147,7 +147,7 @@
 
      <div class="page-setumei">
       <p>
-       住所　　<spen class="trisngle1"></spen>　越前市若竹町11-24 <br>
+       住所　　<spen class="mycontent"></spen>　越前市若竹町11-24 <br>
        営業時間▶　11：00～15：00<br>
        定休日　▶　日曜日<br>
        電話　　▶　0778-22-2052<br>
