--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ auto: true,
        <p>所属：仁愛大学 コミュニケーション学科 吉村ゼミ<br>
        出身：福井県越前市<br>
        吉村ゼミにてデザイン・企画の経験を積み、現在は卒業制作として越前かるたのプロジェクトを進めている。</p>
-       <p>■メッセージ■<br>
+       <p>〓メッセージ〓<br>
       『でっかいかるたで大合戦！！』のイベントから始まったこのプロジェクトは、地域貢献活動支援補助金など、市役所の方々のご協力もあって完成品の制作まで進めることができました。<br>
       生まれも育ちも越前市である私は、かるた王国と言われる越前市でかるたを通して越前市の魅力を伝えたいと考え、カラフルながらも趣のある色を札1枚1枚に与えて遊んで楽しい見て楽しいかるたになるようにデザインしました。制作にあたって、実際にその場所に行って取材することもあり、私自身魅力を再発見することができたと思います。<br>
       かるたで遊んでみて、気になった札があれば裏面のQRコードを読み取り、たくさんの魅力に触れていただけると嬉しいです。
