--- a/page_ra.html
+++ b/page_ra.html
@@ -101,11 +101,11 @@
 
      <div class="page-setumei">
        <p>
-        住所　　▶　越前市深草2丁目2-11<br>
-        営業時間▶　11：00～15：00<br>
-        定休日　▶　木曜日<br>
-        電話　　▶　0778-22-2543<br>
-        価格　　▶　中華そば　650円<br>
+        住所　　　≫　越前市深草2丁目2-11<br>
+        営業時間　≫　11：00～15：00<br>
+        定休日　　≫　木曜日<br>
+        電話　　　≫　0778-22-2543<br>
+        価格　　　≫　中華そば　650円<br>
         シンプルなTHE中華そば。ハムがたくさんでうれしい！
        </p>
      </div>
@@ -124,11 +124,11 @@
 
      <div class="page-setumei">
       <p>
-       住所　　▶　越前市府中一丁目8-14<br>
-       営業時間▶　11：00～19：30<br>
-       定休日　▶　木曜日<br>
-       電話　　▶　0778-22-0799<br>
-       価格　　▶　中華そば　610円<br>
+       住所　　　≫　越前市府中一丁目8-14<br>
+       営業時間　≫　11：00～19：30<br>
+       定休日　　≫　木曜日<br>
+       電話　　　≫　0778-22-0799<br>
+       価格　　　≫　中華そば　610円<br>
        太麺が美味しく、胡椒のきいたスープは大人の味
       </p>
      </div>
@@ -147,11 +147,11 @@
 
      <div class="page-setumei">
       <p>
-       住所　　<spen class="mycontent"></spen>　越前市若竹町11-24 <br>
-       営業時間▶　11：00～15：00<br>
-       定休日　▶　日曜日<br>
-       電話　　▶　0778-22-2052<br>
-       価格　　▶　中華そば　550円<br>
+       住所　　　≫　越前市若竹町11-24 <br>
+       営業時間　≫　11：00～15：00<br>
+       定休日　　≫　日曜日<br>
+       電話　　　≫　0778-22-2052<br>
+       価格　　　≫　中華そば　550円<br>
        コスパ満点！大盛りでもぺろりといけます！<br>
        食後のソフトクリームは10段⁉
       </p>
