--- a/page_yo.html
+++ b/page_yo.html
@@ -123,11 +123,11 @@
 
      <div class="page-setumei">
       <p>
-       住所　　▶　越前市新保二丁目２ <br>
-       営業時間▶　8：00～18：00<br>
-       定休日　▶　水曜日、1月1日<br>
-       電話　　▶　0778-23-4845<br>
-       価格　　▶　ボルガライス　900円<br>
+       住所　　　≫　越前市新保二丁目２ <br>
+       営業時間　≫　8：00～18：00<br>
+       定休日　　≫　水曜日、1月1日<br>
+       電話　　　≫　0778-23-4845<br>
+       価格　　　≫　ボルガライス　900円<br>
        野菜がたっぷり入ったオムライスに揚げたてのとんかつがサクサク！自家製デミグラスソースをかけて
       </p>
      </div>
@@ -146,11 +146,11 @@
 
      <div class="page-setumei">
      <p>
-      住所　　▶　越前市京町1-4-35<br>
-      営業時間▶　11：30～23：00<br>
-      定休日　▶　火曜日<br>
-      電話　　▶　0778-22-7172<br>
-      価格　　▶　ボルガライス　980円<br>
+      住所　　　≫　越前市京町1-4-35<br>
+      営業時間　≫　11：30～23：00<br>
+      定休日　　≫　火曜日<br>
+      電話　　　≫　0778-22-7172<br>
+      価格　　　≫　ボルガライス　980円<br>
       トマトが効いた少し酸味のある特製ソースがライスと薄焼き卵ととんかつにマッチ！
      </p>
      </div>
@@ -169,11 +169,11 @@
 
      <div class="page-setumei">
       <p>
-      住所　　▶　越前市高瀬2-6-15 <br>
-      営業時間▶　11：00～19：00<br>
-      定休日　▶　月、第三日曜<br>
-      電話　　▶　0778-24-3248<br>
-      価格　　▶　和風ボルガライス並　900円<br>
+      住所　　　≫　越前市高瀬2-6-15 <br>
+      営業時間　≫　11：00～19：00<br>
+      定休日　　≫　月、第三日曜<br>
+      電話　　　≫　0778-24-3248<br>
+      価格　　　≫　和風ボルガライス並　900円<br>
       (ミニ、並、大盛、特盛、デカ盛り、メガ盛り)<br>
       うどん屋さんの和風だしが効いた卵は出し巻き卵のようで、油で炒めていないご飯はあっさりしていてまさに和風！デカ盛りが売りなので食べすぎ注意！
       </p>
